fix raycaster click for collapsed left panel
fix raycaster click (select) events issue for left panel

--- a/src/style/scenegraph.styl
+++ b/src/style/scenegraph.styl
@@ -22,7 +22,46 @@
   flex-direction column
   overflow auto
   padding-top 32px
-  width 230px
+  width auto
+
+  .layer 
+    width 340px
+    margin-top 20px
+    background #4b4b4b
+    border-radius 12px
+    display flex
+    flex-direction column
+    align-items center
+
+  .layer.active
+    background #8941FF
+
+  .entity.option
+    display flex
+    flex-direction column
+    width 340px   
+    flex none
+    order 1
+    flex-grow 0
+    padding 16px 24px 16px 16px
+    box-sizing border-box
+
+    > span
+      display flex
+      justify-content flex-start
+      align-items center
+      flex-direction row
+      position relative
+
+      .entityPrint
+        flex-basis 237px
+        margin-left 15px
+
+  .entity:first-child
+    margin 0px !important
+
+  .entity:last-child
+      margin-bottom 8px
 
   .entity
     background $bg
